--- a/src/client/app/globals.css
+++ b/src/client/app/globals.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import "rpg-awesome/css/rpg-awesome";
+/*
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -72,6 +78,7 @@
     --card-border-rgb: 200, 200, 200;
   }
 }
+  */
 
 * {
   box-sizing: border-box;
@@ -81,12 +88,8 @@
 
 html,
 body {
-  max-width: 100vw;
+  /*max-width: 100vw;*/
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
 }
 
 a {
@@ -96,6 +99,10 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    /*color-scheme: dark;*/
   }
+}
+
+.font-display-swap {
+  font-display: swap;
 }
